Continuação dos exercícios

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Exercícios</title>
 </head>
 <body>
-    <script src="Ex_01.js"></script>
+    <script src="ex_03.js"></script>
 </body>
 </html>
